# cuber

./: .gitignore  README.md  build.zig  build.zig.zon  meson.build  meson_options.txt
cuber/: meson.build
cuber/include/cuber/: concept.h  mesh.h
cuber/include/cuber/dx/: DxCubeRenderer.h  DxCubeStereoRenderer.h  DxLineRenderer.h  shader.h
cuber/include/cuber/gl3/: GlCubeRenderer.h  GlLineRenderer.h  shader.h  vao.h
cuber/src/: mesh.cpp
cuber/src/dx/: DxCubeRenderer.cpp  DxCubeRendererImpl.cpp  DxCubeRendererImpl.h  DxCubeStereoRenderer.cpp  DxLineRenderer.cpp  cuber_shader.h  cuber_stereo_shader.h  shader.cpp
cuber/src/gl3/: GlCubeRenderer.cpp  GlLineRenderer.cpp  shader.cpp  vao.cpp
example/: Animation.cpp  Animation.h  Bvh.cpp  Bvh.h  BvhFrame.cpp  BvhFrame.h  BvhNode.cpp  BvhNode.h  BvhPanel.cpp  BvhPanel.h  BvhSolver.cpp  BvhSolver.h  GlRenderer.cpp  GlRenderer.h  GuiApp.cpp  GuiApp.h  GuiWindow.cpp  HumanoidFrame.h  TurnTable.cpp  TurnTable.h  UdpSender.cpp  UdpSender.h  main.cpp  meson.build  quat_packer.h  srht.h
example/bvhutil/: Animation.cpp  Animation.h  Bvh.cpp  Bvh.h  BvhFrame.cpp  BvhFrame.h  BvhNode.cpp  BvhNode.h  BvhPanel.cpp  BvhPanel.h  BvhSolver.cpp  BvhSolver.h  GuiApp.cpp  GuiApp.h  OrbitView.h  TurnTable.cpp  TurnTable.h  UdpSender.cpp  meson.build  srht.h
example/dx11/: DxPlatform.cpp  DxPlatform.h  DxRenderer.cpp  DxRenderer.h  main.cpp  meson.build
example/gl3/: GlRenderer.cpp  GlRenderer.h  GlfwPlatform.cpp  GlfwPlatform.h  GuiWindow.cpp  GuiWindow.h  main.cpp  main.zig  meson.build  run.cpp  run.h
src/: CubeRenderer.cpp  CubeRenderer.h  LineRenderer.cpp  LineRenderer.h  cuber.h  error_handler.h  geometry.h  meson.build  shader.cpp  shader.h  vao.cpp  vao.h
src/dx11/: DxCubeRenderer.cpp  DxCubeRenderer.h  DxCubeStereoRenderer.cpp  DxLineRenderer.cpp  meson.build  shader.cpp  shader.h
src/dx11/include/cuber/: DxCubeRenderer.h  DxCubeStereoRenderer.h  DxLineRenderer.h
src/gl3/: GlCubeRenderer.cpp  GlCubeRenderer.h  meson.build  shader.cpp  vao.cpp  vao.h
src/gl3/include/cuber/: GlCubeRenderer.h  shader.h  vao.h
src/mesh/: mesh.cpp  mesh.h  meson.build
subprojects/: DirectXTK.wrap  grapho.wrap  imgui.wrap  meshutils.wrap  spanmath.wrap
subprojects/packagefiles/directxtk/: meson.build
subprojects/packagefiles/meshutils/: meson.build
tests/: meson.build  quat32_test.cpp  ray_test.cpp
